bugfix: enable preview