@@ -91,7 +91,7 @@
             <properties>
                 <skipITs>false</skipITs>
                 <quarkus.package.type>native</quarkus.package.type>
-                <quarkus.native.additional-build-args>-J-enable-preview</quarkus.native.additional-build-args>
+                <quarkus.native.additional-build-args>-J--enable-preview</quarkus.native.additional-build-args>
             </properties>
         </profile>
     </profiles>
